--- a/Resources/DesktopModules/Admin/Security/App_LocalResources/Register.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Security/App_LocalResources/Register.ascx.nl-NL.resx
@@ -28,6 +28,6 @@
     <value>De authenticatieprovider gebruikt om te registreren heeft geen e-mailadres verstrekt.  Voer een geldig e-mailadres in en klik op de knop registreren om je inschrijving te voltooien.</value>
   </data>
   <data name="RegisterWarning.Text" xml:space="preserve">
-    <value>- &lt;em&gt;(&lt;strong&gt;Opmerking:&lt;/strong&gt; -registratie kan het enkele seconden duren.  Zodra je klikt op de knop registreren moet je wachten totdat het systeem reageert.)&lt;/em&gt;</value>
+    <value> &lt;em&gt;(&lt;strong&gt;Opmerking: &lt;/strong&gt; registratie kan het enkele seconden duren. Zodra je klikt op de knop registreren moet je wachten totdat het systeem reageert.)&lt;/em&gt;</value>
   </data>
 </root>
