Two minor spelling corrections (#138)
Je heeft -->>> Je hebt
Sekecteerd de --> Selecteer de

Co-authored-by: David Poindexter <dpoindexter@nvisionative.com>

--- a/Resources/App_GlobalResources/SharedResources.nl-NL.resx
+++ b/Resources/App_GlobalResources/SharedResources.nl-NL.resx
@@ -1637,8 +1637,8 @@ Als je deze toevoeging verwacht, negeer dan deze e-mail; anders wordt een onmidd
   <data name="System_Default.Text" xml:space="preserve">
     <value>Systeemstandaard</value>
   </data>
-  <data name="TabAccess.Error" xml:space="preserve">
-    <value>Je heeft geen toegang om deze pagina te bekijken.</value>
+  <data name="TabAccess.Error" lastModified="2020-05-15 15:54:23">
+    <value xml:space="preserve">Je hebt geen toegang om deze pagina te bekijken.</value>
   </data>
   <data name="TESTCOMPLETE.Log" xml:space="preserve">
     <value>Test uitgevoerd. {0} milliseconden gewacht.</value>
